cool landing page

--- a/index.html
+++ b/index.html
@@ -4,12 +4,23 @@
     <meta charset="UTF-8">
     <link rel='stylesheet' href="https://fonts.googleapis.com/css?family=Amatic+SC">
     <title>The Flatiron Experience</title>
-    <header id="header">
+    <!-- <header id="header">
         <h1>Welcome to <em>The Flatiron School Experience</em></h1>
-    </header>
-
-
-
+    </header> -->
+    <div id=container>
+      The
+      <div id=flip>
+        <div><div>Flatiron</div></div>
+        <div><div>School</div></div>
+        <div><div>Board Game</div></div>
+      </div>
+      Experience
+    </div>
+    <div class="playBtn">
+      <div class="playBtnText">
+        Play
+      </div>
+    </div>
 
     <link rel="stylesheet" href="./styles/index.css">
     <script type="text/javascript" src="src/index.js" defer></script>
