semi-working movement

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <div class="center-tile">
         <div id="die1" class="dice">0</div>
         <!-- <div id="die2" class="dice">0</div> -->
-        <button class="dieBtn" onclick="rollDice()"> Roll Dice</button>
+        <button class="dieBtn"><p>Roll Dice!</p></button>
         <h2 id="status" style="clear: left;"> </h2>
       </div>
   </body>
