working on user creation

--- a/index.html
+++ b/index.html
@@ -15,9 +15,14 @@
     </div>
     <br>
     <div class="instructions"> Graduate in the fewest turns possible!</div>
-    <div class="playBtn">
-      <div class="playBtnText">
-        Play
+    <div class="newGameBtn">
+      <div class="newGameBtnText">
+        New Game
+      </div>
+    </div>
+    <div class="continueBtn">
+      <div class="continueText">
+        Continue
       </div>
     </div>
 
@@ -26,9 +31,16 @@
     
   </header>
   <body>
+    <h3 class="createUser">
+      Please enter a username
+      <br> 
+      <input class="usernameText" type="text" value="Username">
+      <h4 class="defaultNameChosen"> It can't be the default!</h4>
+      <button id="submitUsername">Play</button>
+    </h3>
     <div id="grid">
       <div id="1" class="tile">
-        Start!
+        Start
       </div>
       <div id="2" class="tile">
         
