Added turn counter

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
         
       </div>
       <div class="center-tile">
+        <div id="turn-count"> Turn Count: 0</div>
         <div id="current-skills"> Languages Learned: None </div>
         <div id="coding-knowledge"> Coding Knowledge: 0 </div>
         <div id="die1" class="dice">0</div>
